# rp2040_cmake

./: CMakeLists.txt  LSM6DSOX.cpp  LSM6DSOX.h  README.md  blink.cpp
